2009-11-13  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (intern): perform additional symbol lookup after CERROR
	when package is locked - the symbol may have been interned while
	processing handlers (or by CERROR itself)

2009-11-12  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (unused): do not export to clisp.h, it is never used
	in any module and causes trouble on some platforms
	* modules/berkeley-db/bdb.c, modules/dirkey/dirkey.c:
	* modules/gtk2/gtk.lisp, modules/syscalls/calls.c:
	no need to "#under unused" anymore
	* modules/clx/new-clx/clx.f, modules/rawsock/rawsock.c:
	define unused which is actually used here a few times,
	but only _after_ all #include's

2009-11-11  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (unused): undef unused before all the
	system includes and do not restore it because it is not used here

2009-11-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (cpu): fallback to ${host_cpu}
	(fail): add function, use everywhere

2009-11-10  Sam Steingold  <sds@gnu.org>

	* configure (ffi_modules): fix the configure.in test for module
	requiring FFI

2009-11-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): use FULLTOPDIR for build-aux

2009-11-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (note-function-used): use STYLE-WARNING for
	deprecated functions because WARNING implies non-NIL 3rd return
	value (failure-p) from COMPILE which is an overkill
	* deprecated.lisp (type-expand-1): ditto

2009-11-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (initialize_thread_bindings): allocate per thread value
	cell for symbols that do not have one

2009-11-04  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): fix a type error in the last patch

2009-11-03  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: create dynamic bindings for all special variables
	* zthread.d (initialize_thread_bindings): initializes symbols per
	thread value cells during thread creation
	(thread_stub): use it